# fitness-tracker-back

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: actions.yaml
app/: alembic.ini  main.py  run.sh
app/api/: __init__.py  user.py
app/core/: cookie.py  dependency.py  security.py  settings.py
app/migrations/: env.py
app/migrations/versions/: 2026_07_08_1917-a9c7ee59cdab_users.py
app/models/: __init__.py  base.py  user.py
app/repositories/: __init__.py  common.py  user.py
app/schemas/: __init__.py  status_codes.py  user.py
app/services/: user.py
app/tests/: conftest.py  factory.py  utils.py
app/tests/api/: conftest.py  test_user.py
app/tests/migrations/: conftest.py  test_stairway.py
